tests/errors/17_return_outside.f
      PROGRAM RETURN_OUTSIDE
      RETURN
      END
